wtx-macros/tests/ui/error_enum/bad_req.stderr
error: Request data must end with the `Req` suffix.
 --> tests/ui/error_enum/bad_req.rs:5:14
  |
5 |   pub struct Rfdsqw;
  |              ^^^^^^
